--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:yo@marioromero.com.ar">email</a></li>
-        		<li><a href="https://github.com/marioromero78">github.com/marioromero78</a></li>
+        		<li><a href="https://github.com/maaroarg">github.com/maaroarg</a></li>
 			</ul>
 		</footer>
 	</body>
